--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,8 @@
 <h1>Archives for ralphsaunders.co.uk</h1>
 
 <dl>
+    <dt>Tue 25 November 2014</dt>
+    <dd><a href="./karma-unit-testing.html">Make front-end unit tests easy with karma</a></dd>
     <dt>Sun 23 November 2014</dt>
     <dd><a href="./automatic-css-sprites.html">Automate sprites with css-sprite &amp; stylus</a></dd>
 </dl>
