Add video sync javascript

--- a/frosted-glass-with-filter-blur.html
+++ b/frosted-glass-with-filter-blur.html
@@ -124,12 +124,14 @@ obtaining something like a frosted glass effect.</p>
     }
 
     .blurred {
+        -moz-filter: blur(20px);
         -webkit-filter: blur(20px);
         filter: blur(20px);
         z-index: -2;
     }
 
     .sharp {
+        -moz-clip-path: polygon(0 0, 0 100%, 40% 100%, 40% 0, 80% 0, 80% 100%, 100% 100%, 100% 0);
         -webkit-clip-path: polygon(0 0, 0 100%, 40% 100%, 40% 0, 80% 0, 80% 100%, 100% 100%, 100% 0);
         clip-path: polygon(0 0, 0 100%, 40% 100%, 40% 0, 80% 0, 80% 100%, 100% 100%, 100% 0);
     }
@@ -151,6 +153,8 @@ obtaining something like a frosted glass effect.</p>
     }
 
     .sandbox.transform {
+        -moz-perspective: 1500px;
+        -moz-transform: scale(.5);
         -webkit-perspective: 1500px;
         -webkit-transform: scale(.5);
         perspective: 1500px;
@@ -159,14 +163,17 @@ obtaining something like a frosted glass effect.</p>
     }
 
     .sandbox.transform .demo-video {
+        -moz-transform: rotateY(40deg);
         -webkit-transform: rotateY(40deg);
     }
 
     .sandbox.transform .sharp {
+        -moz-transform: rotateY(40deg) translate(10%, 10%);
         -webkit-transform: rotateY(40deg) translate(10%, 10%);
     }
 
     .sandbox.transform .blurred-position {
+        -moz-transform: rotateY(40deg) translate(30%, 30%);
         -webkit-transform: rotateY(40deg) translate(30%, 30%);
     }
 
@@ -276,6 +283,29 @@ element, so we can do things like add transparent backgrounds with <code>rgba()<
     }
 <span class="nt">&lt;/style&gt;</span>
 </pre></div>
+
+
+<script type="text/javascript">
+    var videosLoaded = 0;
+
+    var videos = [].map.call(document.querySelectorAll('video'), function(video) {
+        video.pause();
+        video.currentTime = 0;
+        video.addEventListener('loadeddata', function() {
+            videoLoaded();
+        }, false)
+    })
+
+    function videoLoaded() {
+        videosLoaded ++;
+
+        if(videosLoaded === videos.length) {
+            [].map.call(document.querySelectorAll('video'), function(video) {
+                video.play();
+            })
+        }
+    }
+</script>
 </article>
 
 <div class="hero-footer">
