Assign .sandbox new context using translateZ

--- a/frosted-glass-with-filter-blur.html
+++ b/frosted-glass-with-filter-blur.html
@@ -106,6 +106,8 @@ obtaining something like a frosted glass effect.</p>
         height: 0;
         overflow:hidden;
         margin-bottom:20px;
+        -webkit-transform: translateZ(0);
+        transform: translateZ(0);
     }
 
     .sandbox video {
@@ -286,6 +288,7 @@ element, so we can do things like add transparent backgrounds with <code>rgba()<
 
 
 <script type="text/javascript">
+    // Start videos at the same time
     var videosLoaded = 0;
 
     var videos = [].map.call(document.querySelectorAll('video'), function(video) {
@@ -294,13 +297,15 @@ element, so we can do things like add transparent backgrounds with <code>rgba()<
         video.addEventListener('loadeddata', function() {
             videoLoaded();
         }, false)
+
+        return video;
     })
 
     function videoLoaded() {
         videosLoaded ++;
 
         if(videosLoaded === videos.length) {
-            [].map.call(document.querySelectorAll('video'), function(video) {
+            videos.map(function(video) {
                 video.play();
             })
         }
