Added some meta tags and tweaked styles

--- a/automatic-css-sprites.html
+++ b/automatic-css-sprites.html
@@ -1,9 +1,14 @@
 <!doctype html>
 <html>
-    <head>
+    <head lang="en-us">
         <title>Automate sprites with css-sprite &amp; stylus</title>
 
+        <meta charset="utf-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<link href="http://ralphsaunders.co.uk/feeds/all.atom.xml" type="application/atom+xml" rel="alternate" title="ralphsaunders.co.uk - Full Atom Feed" />
+<link href="http://ralphsaunders.co.uk/feeds/all.rss.xml" type="application/rss+xml" rel="alternate" title="ralphsaunders.co.uk - Full RSS Feed" />
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="./theme/css/build/compiled.css" />
