jQuery is dead article

--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,8 @@
 <h1>Archives for ralphsaunders.co.uk</h1>
 
 <dl>
+    <dt>Tue 26 May 2015</dt>
+    <dd><a href="./jquery-is-dead.html">jQuery is dead</a></dd>
     <dt>Wed 17 December 2014</dt>
     <dd><a href="./frosted-glass-with-filter-blur.html">Frosted Glass With filter:blur()</a></dd>
     <dt>Tue 25 November 2014</dt>
