--- a/tags.html
+++ b/tags.html
@@ -15,6 +15,7 @@
         </ul></nav><!-- /#menu -->
     <h1>Tags for ralphsaunders.co.uk</h1>        <li><a href="./tag/css.html">CSS</a> (1)</li>
         <li><a href="./tag/fed-tooling.html">fed-tooling</a> (2)</li>
+        <li><a href="./tag/javascript.html">javascript</a> (1)</li>
         <li><a href="./tag/npm.html">npm</a> (2)</li>
         <footer id="contentinfo" class="body">
                 <address id="about" class="vcard body">
