Added follow button to articles

--- a/jquery-is-dead.html
+++ b/jquery-is-dead.html
@@ -168,6 +168,11 @@
 </ol>
 <p>Yeah, jQuery is dead not because frameworks make you write better code - we know they don’t - but because your framework does DOM manipulation better than you ever could.</p>
 <p>Please learn a framework properly and then come join me in my paradise.</p>
+
+    <p class="twitter-cta">
+        <a href="https://twitter.com/ralphsaunders" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ralphsaunders</a>
+    <p>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </article>
 
 <div class="hero-footer">
