--- a/karma-unit-testing.html
+++ b/karma-unit-testing.html
@@ -187,6 +187,11 @@ using it with gulp:</p>
 task. I only want the test to run once and we want karma to output using the
 <a href="https://www.jetbrains.com/teamcity/">TeamCity</a> reporter. TeamCity is the build
 environment, and this means the output is present in TeamCity's build log.</p>
+
+    <p class="twitter-cta">
+        <a href="https://twitter.com/ralphsaunders" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ralphsaunders</a>
+    <p>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </article>
 
 <div class="hero-footer">
