--- a/frosted-glass-with-filter-blur.html
+++ b/frosted-glass-with-filter-blur.html
@@ -316,6 +316,11 @@ element, so we can do things like add transparent backgrounds with <code>rgba()<
         }
     }
 </script>
+
+    <p class="twitter-cta">
+        <a href="https://twitter.com/ralphsaunders" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @ralphsaunders</a>
+    <p>
+<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0],p=/^http:/.test(d.location)?'http':'https';if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src=p+'://platform.twitter.com/widgets.js';fjs.parentNode.insertBefore(js,fjs);}}(document, 'script', 'twitter-wjs');</script>
 </article>
 
 <div class="hero-footer">
