Debugger-first dev

--- a/jquery-is-dead.html
+++ b/jquery-is-dead.html
@@ -57,10 +57,10 @@
         </div>
     </header>
 
-    <p>Over the past twelve months it seems there’s been a surge in the usage of javascript frameworks. Everyone and their mother seems to be rolling out one of the many choices in their web builds. Whether it’s <a href="https://angularjs.org/">AngularJS</a>, <a href="https://facebook.github.io/react/">React</a>, or <a href="http://emberjs.com/">Ember.js</a>; every front-end developer seems to be hot under the collar about feature X in framework Y. </p>
+    <p>Over the past twelve months it seems there’s been a surge in the usage of javascript frameworks. Everyone and their mother seems to be rolling out one of the many choices in their web builds. Whether it’s <a href="https://angularjs.org/">AngularJS</a>, <a href="https://facebook.github.io/react/">React</a>, or <a href="http://emberjs.com/">Ember.js</a>; every front-end developer seems to be hot under the collar about feature X in framework Y.</p>
 <p>And why wouldn’t they be? Frameworks are a wonderful paradise of structured code, proven abstractions, and community support. No longer will the front-end developer have to trawl through some imposter’s jQuery DOM-bound spaghetti searching for that illusive function that sets the entire page in motion  &mdash; yes page, not component.</p>
 <p>Or so I thought.</p>
-<p>Then I picked through an implementation of a multi-faceted search written by an Angular newbie and begrudgingly noted that bad code can happen anywhere. It seems that in actuality, tools that require more upfront knowledge do more harm than good in the hands of the inexperienced. </p>
+<p>Then I picked through an implementation of a multi-faceted search written by an Angular newbie and begrudgingly noted that bad code can happen anywhere. It seems that in actuality, tools that require more upfront knowledge do more harm than good in the hands of the inexperienced.</p>
 <p>On the face of it the code was somewhat more structured than any given piece of jQuery you may come across. It used some of the proven abstractions like controllers and models. It even had a service! Unfortunately it used most of the abstractions poorly. The controller was many hundreds of lines long and did everything on the page. The models did more than hold state and data. In essence, the tools the framework provided were missused because the developer didn’t know what they were for.</p>
 <p>Frameworks are a wonderful paradise if you have experience of the concepts they implement; they aren’t a magical replacement for good practice and discipline. That said, jQuery is definitely still dead. Here’s why.</p>
 <p>In jQuery we often see some code like this:</p>
@@ -151,7 +151,7 @@
 
 <p>We just added a feature to our lightbox directive without modifying any code in the view and without doing any DOM manipulation. This is the power of the template.</p>
 <h2>DOM manipulation sucks and you know it does</h2>
-<p>Have you ever looked at the source of a jQuery slider, accordion, or lightbox and seen hundreds of lines of code that are there just to manipulate how the DOM is displaying a particular state? </p>
+<p>Have you ever looked at the source of a jQuery slider, accordion, or lightbox and seen hundreds of lines of code that are there just to manipulate how the DOM is displaying a particular state?</p>
 <p>I have - usually to fix some obscure bug that only happens after a particular sequence of things. Only moments after reading the bug report you’ve broken a sweat because you just know this bug is going to be in DOM manipulation soup. You’re going to wade through a few lines of state and many lines of addClass() and appendTo() until you reside on the floor, weeping, waiting for the misery to end.</p>
 <p>Is it any wonder why when you look at how most jQuery is written? See, when you write some jQuery you end up:</p>
 <ol>
@@ -162,7 +162,7 @@
 </ol>
 <p>Compare that with Angular, where you end up:</p>
 <ol>
-<li>Extending HMTL with data attributes to bind events.</li>
+<li>Extending HTML with data attributes to bind events.</li>
 <li>Crafting a template that will display data.</li>
 <li>Writing javascript to modify state of modular components.</li>
 </ol>
