--- a/debugger-first-dev.html
+++ b/debugger-first-dev.html
@@ -72,12 +72,12 @@ was working on and the other with <a href="https://developer.mozilla.org/en-US/"
 <p>Despite this, I still see  developers writing things like
 <code>console.log(i + ‘ items’)</code>, and
 <code>console.log($(‘.some-element’).outerHeight())</code> &mdash; seemingly unaware of
-the wonderous tools that come installed with the browsers they use every day.</p>
+the wondrous tools that come installed with the browsers they use every day.</p>
 <p>Could you be using web inspector better?</p>
 <p>If you find yourself doing any of these, it’s likely you could be using web
 inspect better:</p>
 <ul>
-<li><code>console.log()</code>ing variables ad-nauseum.</li>
+<li><code>console.log()</code>ing variables ad nauseam.</li>
 <li>Guessing at variable and function names.</li>
 <li>Making lots of small code changes resulting in back and forth between browser
   and code until it’s right.</li>
