--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,8 @@
 <h1>Archives for ralphsaunders.co.uk</h1>
 
 <dl>
+    <dt>Wed 08 February 2017</dt>
+    <dd><a href="./line-boy.html">Line Boy</a></dd>
     <dt>Thu 21 May 2015</dt>
     <dd><a href="./javascript-is-not-the-antihero.html">JavaScript is no longer the antihero</a></dd>
     <dt>Mon 11 May 2015</dt>
