--- a/tags.html
+++ b/tags.html
@@ -14,6 +14,7 @@
         <nav id="menu"><ul>
         </ul></nav><!-- /#menu -->
     <h1>Tags for ralphsaunders.co.uk</h1>        <li><a href="./tag/css.html">CSS</a> (1)</li>
+        <li><a href="./tag/experiment.html">experiment</a> (1)</li>
         <li><a href="./tag/fed-tooling.html">fed-tooling</a> (3)</li>
         <li><a href="./tag/javascript.html">javascript</a> (3)</li>
         <li><a href="./tag/npm.html">npm</a> (2)</li>
