Testing Async Javascript
New blog post woop!

--- a/archives.html
+++ b/archives.html
@@ -16,6 +16,8 @@
 <h1>Archives for ralphsaunders.co.uk</h1>
 
 <dl>
+    <dt>Wed 01 March 2017</dt>
+    <dd><a href="./testing-asynchronous-javascript-with-mocha-chai.html">Testing Async JavaScript with Mocha & Chai</a></dd>
     <dt>Wed 08 February 2017</dt>
     <dd><a href="./line-boy.html">Line Boy</a></dd>
     <dt>Thu 21 May 2015</dt>
