Update async javascript post

--- a/testing-asynchronous-javascript-with-mocha-chai.html
+++ b/testing-asynchronous-javascript-with-mocha-chai.html
@@ -11,7 +11,7 @@
         <meta property="og:type"        content="website" />
         <meta property="og:title"       content="Testing Async JavaScript with Mocha & Chai" />
         <meta property="og:description" content="" />
-        <meta property="og:image"       content="" />
+        <meta property="og:image"       content="./images/dist/async-javascript-mocha-chai/opengraph.png" />
 
         <!-- Stylesheets -->
         <link rel="stylesheet" href="./theme/css/main.css" />
@@ -53,7 +53,6 @@
 
         <article class="article">
             <header class="header-area">
-
                 <div class="contain-small">
                     <h1 class="header-title">Testing Async JavaScript with Mocha & Chai</h1>
                 </div>
