--- a/line-boy.html
+++ b/line-boy.html
@@ -13,6 +13,13 @@
         <meta property="og:description" content="" />
         <meta property="og:image"       content="" />
 
+        <link rel="apple-touch-icon" sizes="180x180" href="images/dist/favicon/apple-touch-icon.png">
+        <link rel="icon" type="image/png" href="images/dist/favicon/favicon-32x32.png" sizes="32x32">
+        <link rel="icon" type="image/png" href="images/dist/favicon/favicon-16x16.png" sizes="16x16">
+        <link rel="manifest" href="images/dist/favicon/manifest.json">
+        <link rel="mask-icon" href="images/dist/favicon/safari-pinned-tab.svg" color="#00ffe1">
+        <meta name="theme-color" content="#636363">
+
         <!-- Stylesheets -->
         <link rel="stylesheet" href="./theme/css/main.css" />
 
