Fix typo in latest post

--- a/testing-asynchronous-javascript-with-mocha-chai.html
+++ b/testing-asynchronous-javascript-with-mocha-chai.html
@@ -78,7 +78,7 @@ manipulation.</p>
 Karma</a>, using Jasmine as my go-to framework. I went
 on a bit of a journey and it turns out that <a href="https://jasmine.github.io/2.5/introduction#section-Asynchronous_Support">Jasmine does have asynchronous
 support</a>,
-but the examples below where achieved with <a href="https://mochajs.org/">Mocha</a> and
+but the examples below were achieved with <a href="https://mochajs.org/">Mocha</a> and
 <a href="http://chaijs.com/">Chai</a> (although they basically read pretty much exactly the
 same).</p>
 <p>Mocha makes writing asynchronous unit tests <a href="https://mochajs.org/#asynchronous-code">really
